# navigation-agent-mcp

./: .gitignore  .releaserc.json  ADD_AGENT.md  CHANGELOG.md  README.md  demo-php-navigation.sh  package-lock.json  package.json  pub_doc.md  pyproject.toml  release-please-config.json  test-php-support.mjs  tsconfig.base.json
.atl/: skill-registry.md
crates/navigation-engine/: Cargo.toml
crates/navigation-engine/src/: error.rs  lib.rs  main.rs  protocol.rs  tree_sitter_ext.rs  workspace.rs
crates/navigation-engine/src/analyzers/: java.rs  language_analyzer.rs  mod.rs  python.rs  registry.rs  rust.rs  types.rs  typescript.rs
crates/navigation-engine/src/analyzers/common/: mod.rs
crates/navigation-engine/src/analyzers/csharp/: common.rs  find_symbol.rs  mod.rs  trace_callers.rs  trace_flow.rs
crates/navigation-engine/src/analyzers/go/: common.rs  find_symbol.rs  mod.rs  trace_callers.rs  trace_flow.rs
crates/navigation-engine/src/analyzers/java/: common.rs  find_endpoints.rs  find_symbol.rs  mod.rs  trace_callers.rs  trace_flow.rs
crates/navigation-engine/src/analyzers/php/: common.rs  find_endpoints.rs  find_symbol.rs  mod.rs  trace_callers.rs  trace_flow.rs
crates/navigation-engine/src/analyzers/python/: common.rs  find_endpoints.rs  find_symbol.rs  mod.rs  trace_callers.rs  trace_flow.rs
crates/navigation-engine/src/analyzers/rust/: common.rs  find_endpoints.rs  find_symbol.rs  mod.rs  trace_callers.rs  trace_flow.rs
crates/navigation-engine/src/capabilities/: find_symbol.rs  inspect_tree.rs  list_endpoints.rs  mod.rs  search_text.rs  trace_callers.rs  trace_flow.rs  trace_symbol.rs
crates/navigation-engine/tests/: analyzers_csharp.rs  analyzers_go.rs  analyzers_java.rs  analyzers_python.rs  analyzers_rust.rs  analyzers_types.rs  analyzers_typescript.rs  capabilities_find_symbol.rs  capabilities_inspect_tree.rs  capabilities_list_endpoints.rs  capabilities_search_text.rs  capabilities_trace_callers.rs  capabilities_trace_flow.rs  capabilities_trace_symbol.rs  protocol.rs  workspace.rs
docs/: testing.md  (+4 more)
(+87 files in other folders)
