[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "navigation-agent-mcp"
version = "0.1.0"
description = "Navigation-focused MCP server with normalized code inspection tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.0.0,<2.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "tree-sitter>=0.25.0,<0.26.0",
  "tree-sitter-java>=0.23.0,<0.24.0",
  "tree-sitter-typescript>=0.23.0,<0.24.0",
]

[project.scripts]
navigation-mcp = "navigation_mcp.server:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/navigation_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
