[package]
name = "navigation-engine"
version = "0.4.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25.8"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-language = "0.1"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
