[package]
name = "navigation-engine"
version = "0.8.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
glob = "0.3.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tree-sitter = "0.26.8"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-language = "0.1.7"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.16.0"
